--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,6 @@
 <ion-view title="Contacts">
   <div class="ion-view">
-    <ion-content padding="true" ng-controller="">
+    <ion-content padding="true">
       <div class="list">
             <a href="#/communications" class="item item-avatar">
               <img src="" alt="">
