Pass contactID through to message screen

--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -1,4 +1,4 @@
-<ion-view title="Communications">
+<ion-view ng-controller="CommunicationCtr as communicationCtr" title="{{ communicationCtr.title }}">
 	<ion-content padding="true">
 		<div class="list">
 			<a href="" class="item item-avatar">
