--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -3,8 +3,12 @@
 		<div class="list">
 			<a href="" class="item item-avatar">
 				<h2>Text Message</h2>
-				<p>This is a text message</p>
+				<p>This is a text message</p>	<button align="right" class="button">
+			  Add note
+			</button>
 			</a>
+
 		</div>
+
 	</ion-content>
 </ion-view>
