--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,13 +1,13 @@
-<ion-view title="Contacts">
+<ion-view title="Contacts" ng-controller="ContactCtr as contactCtr">
   <ion-nav-buttons side="right">
-    <a class="button" ng-href="#/communications/1">Add Contact</a>
+    <a class="button" ng-click="contactCtr.chooseContact()">Add Contact</a>
   </ion-nav-buttons>
   <div class="ion-view">
-    <ion-content padding="true" ng-controller="ContactCtr as contactCtr">
+    <ion-content padding="true" >
       <div class="list" ng-repeat="contact in contactCtr.contacts" >
             <a ng-href="#/communications/{{ contact.id }}" class="item item-avatar">
               <img src="" alt="">
-              <h2>{{ contact.name }}</h2>
+              <h2>{{ contact.displayName }}</h2>
               <p>This will be the first text message</p>
             </a>
           </div>
