--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,6 @@
 <ion-view title="Contacts" ng-controller="ContactCtr as contactCtr">
   <ion-nav-buttons side="right">
-    <a class="button" ng-click="contactCtr.chooseContact()">Add Contact</a>
+    <a class="button" ng-href="#/addContact">Add Contact</a>
   </ion-nav-buttons>
   <div class="ion-view">
     <ion-content padding="true" >
