Fix naming refactor

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,9 +5,9 @@
   <div class="ion-view">
     <ion-content padding="true" >
       <div class="list" ng-repeat="contact in contactCtr.contacts" >
-            <a ng-href="#/profile/{{ contact.ContactId }}" class="item item-avatar">
+            <a ng-href="#/profile/{{ contact.contactId }}" class="item item-avatar">
               <img src="" alt="">
-              <h2>{{ contact.Name }}</h2>
+              <h2>{{ contact.name }}</h2>
               <!--<p>This will be the first text message</p>-->
             </a>
           </div>
