--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,6 +1,6 @@
 <ion-view ng-controller="ProfileCtr as profileCtr">
 	<ion-nav-title>
-		{{profileCtr.Name}}
+		{{profileCtr.name}}
 	</ion-nav-title>
 	<ion-content padding="true" >
 		<!--<div class="tabs">
