Update passing through data to communcations

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-icon-top tabs-default">
+<ion-tabs class="tabs-icon-top tabs-positive">
 	<ion-tab title="Communications" ui-sref="profile.communications" icon-on="ion-ios-telephone" icon-off="ion-ios-telephone-outline">
 		Communications
 		<ion-nav-view name="profile-communications">
