--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -1,4 +1,4 @@
-<ion-view ng-controller="CommunicationCtr as communicationCtr" title="{{ communicationCtr.title }}">
+<ion-view title="{{ communicationCtr.title }}">
 	<ion-content padding="true">
 		<div class="list">
 			<a href="" class="item item-avatar">
@@ -7,8 +7,6 @@
 			  Add note
 			</button>
 			</a>
-
 		</div>
-
 	</ion-content>
 </ion-view>
