Update communcations title

--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -1,4 +1,5 @@
-<ion-view title="{{ communicationCtr.title }}">
+<ion-view ng-controller="CommunicationCtr as communicationCtr">
+	<ion-nav-title>{{ communicationCtr.title }}</ion-nav-title>
 	<ion-content padding="true">
 		<div class="list">
 			<a href="" class="item item-avatar">
