Remove Add Note button from comms

--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -7,9 +7,7 @@
 		<div class="list">
 			<a href="" class="item item-avatar">
 				<h2>Text Message</h2>
-				<p>This is a text message</p>	<button align="right" class="button">
-			  Add note
-			</button>
+				<p>This is a text message</p>
 			</a>
 		</div>
 	</ion-content>
