Add checkboxes for Summary option

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,5 +1,5 @@
 <div ng-controller="ProfileCtr as profileCtr">
-	<ion-tabs class="tabs-icon-top tabs-positive">
+	<ion-tabs class="tabs-icon-top tabs-positive fade-in-not-out">
 		<ion-tab title="Information" ui-sref="profile.information({contactId: profileCtr.contactId})" icon-on="ion-ios-information" icon-off="ion-ios-information-outline">
 			<ion-nav-view name="profile-information">
 			</ion-nav-view>
