--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -2,10 +2,18 @@
 	<ion-nav-buttons side="left">
         <button class="button-clear" ng-click="communicationCtr.goBack()"><i class="ion-arrow-left-c"></i> Back</button>
     </ion-nav-buttons>
+	<ion-nav-buttons side="right">
+        <button class="button button-icon icon ion-document-text" ng-click="communicationCtr.toggleSummary()"></button>
+    </ion-nav-buttons>
 	<ion-nav-title>{{ communicationCtr.contact.name }}</ion-nav-title>
 	<ion-content>
 		<ion-list>
-			<ion-item ng-repeat="text in communicationCtr.texts">
+			<ion-item ng-repeat="text in communicationCtr.texts" class="item-avatar item-checkbox">
+				<!--Test Image-->
+				<img ng-if="communicationCtr.edit == false" ng-src="../img/ionic.png">
+				<label ng-if="communicationCtr.edit == true" class="checkbox">
+					<input type="checkbox">
+				</label>
 				<h2 ng-if="text.type == 1">{{ communicationCtr.contact.name }}</h2>
 				<h2 ng-if="text.type == 2">You</h2>
 				<p>{{ text.body }}</p>
