Add CSV Service

--- a/www/templates/communicationList.html
+++ b/www/templates/communicationList.html
@@ -5,8 +5,8 @@
     </ion-nav-buttons>
 	<ion-nav-buttons side="right">
         <button ng-if = "communicationCtr.edit == false" class="button button-icon icon ion-document-text" ng-click="communicationCtr.toggleSummary()"></button>
-        <button ng-if = "communicationCtr.edit" class="button button-icon icon ion-close" ng-click="communicationCtr.toggleSummary()"></button>
-        <button ng-if = "communicationCtr.edit" class="button button-icon icon ion-checkmark" ng-click="communicationCtr.finishSummary()"></button>
+        <button ng-if = "communicationCtr.edit" class="button button-icon icon ion-android-close" ng-click="communicationCtr.toggleSummary()"></button>
+        <button ng-if = "communicationCtr.edit" class="button button-icon icon ion-android-done" ng-click="communicationCtr.finishSummary()"></button>
     </ion-nav-buttons>
 	<ion-content>
 		<ion-list>
