--- a/www/templates/information.html
+++ b/www/templates/information.html
@@ -5,5 +5,48 @@
 	<ion-nav-title>{{ informationCtr.title }}</ion-nav-title>
 	<ion-content padding="true">
 		<h1>Profile</h1>
+		<div class="list card">
+			<!-- Client Description Will go here -->
+			<p><strong>
+				Preferred Skill:</strong>
+			</p>				
+			<p><strong>Triggers:</strong>
+			</p>
+			<p><strong>More:</strong>
+		</div>
+		<div class="list card">
+		    <div class="item item-icon-right">
+		    	<h2>Mobile</h2>
+	  			<p><!-- {{ informationCtr.mobileNumber }} --></p>
+		      <div class="icon">
+			      <i class="ion-ios-chatboxes"></i>
+			       <i class="ion-ios-telephone"></i>
+			   </div>
+		    </div>
+		    <div class="item item-icon-right">
+		      <i class="icon ion-home"></i>
+		      Home Address
+		    </div>
+	  	</div>
+	  	<ul class="list">
+		  <li class="item item-toggle">
+		     Automatically Import Texts
+		     <label class="toggle toggle-assertive">
+		       <input type="checkbox">
+		       <div class="track">
+		         <div class="handle"></div>
+		       </div>
+		     </label>
+		  </li>
+		  <li class="item item-toggle">
+		     Automatically Import Calls
+		     <label class="toggle toggle-assertive">
+		       <input type="checkbox">
+		       <div class="track">
+		         <div class="handle"></div>
+		       </div>
+		     </label>
+		  </li>
+		</ul>
 	</ion-content>
 </ion-view>
