--- a/www/templates/editInformation.html
+++ b/www/templates/editInformation.html
@@ -4,21 +4,24 @@
         <button class="button-clear" ng-click="informationCtrl.goBack()"><i class="ion-arrow-left-c"></i> Back</button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-    	<button class="button-icon icon ion-edit" ng-click="informationCtrl.edit()"></button>
+    	<button ng-if="informationCtrl.edit == false" class="button-icon icon ion-edit" ng-click="informationCtrl.edit()">
+    	 <button ng-if = "informationCtrl.editing == !false" class="button button-icon icon ion-checkmark" ng-click="informationCtr.finishEdit()">
 	</ion-nav-buttons>
 	<ion-content padding="true">
 		<h1>Profile</h1>
 		<div class="list">
-			<p class="item"><strong>Preferred Skill:</strong>
+			<p class="item"><strong>Preferred Skills:</strong>
 				{{ informationCtrl.details.pref }} 
 			</p>				
 			<div class="item"><strong>Triggers:</strong> 
 				<ul class="bullet-list">
-			        <li ng-repeat="trigger in informationCtrl.details.triggers">
+			        <li ng-repeat="trigger in informationCtrl.details.triggers" class="item-icon-right">
 			        	<p>{{ trigger }}</p>
+			        	<i class="ion-minus-circled"></i>
 			        </li>
 			    </ul>
-			
+				<i class="ion-plus-circled"></i>
+				<button class="button icon-left ion-">Add New Trigger</button>
 			</div>
 			<p class="item"><strong>More:</strong>
 			 {{ informationCtrl.details.extra }} 
