--- a/www/templates/information.html
+++ b/www/templates/information.html
@@ -4,7 +4,7 @@
         <button class="button-clear" ng-click="informationCtrl.goBack()"><i class="ion-arrow-left-c"></i> Back</button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-    	<button class="button-icon icon ion-edit" ng-click="informationCtrl.edit()"></button>
+    	<button class="button button-icon icon ion-edit" ng-click="informationCtrl.edit()"></button>
 	</ion-nav-buttons>
 	<ion-content padding="true">
 		<h1>Profile</h1>
