--- a/www/templates/information.html
+++ b/www/templates/information.html
@@ -37,11 +37,13 @@
 	        	<p>{{ trigger }}</p>
 	        	<i class="icon  ion-minus-circled"></i>
 			    </li>
-  				<i on-tap="informationCtrl.newTrigger = true"class="icon button-icon ion-plus-circled">Add Trigger</i>
-		     	<div ng-if
-		  			="informationCtrl.newTrigger" class="bar item-input-inset"> 
-      			<i class="icon ion-search placeholder-icon"></i>
-      			<input class="item-input-wrapper" placeholder="" ng-keyup="searchList($event)" type="text"> 
+			    <div on-tap="informationCtrl.addingTrigger = true" ng-if="!informationCtrl.addingTrigger" class="item item-icon-right">
+			    	<h2>Add Trigger</h2>
+				      <i class="icon ion-plus-circled"></i>
+			    </div>
+		     	<div ng-if="informationCtrl.addingTrigger" class="bar item item-input-inset"> 
+      			<input class="item-input-wrapper"  placeholder="Add New Trigger" ng-model="informationCtrl.newTrigger" ng-keyup="searchList($event)" type="text"> 
+      			<i on-tap="informationCtrl.addTrigger(); informationCtrl.addingTrigger = false"class="icon ion-plus placeholder-icon"></i>
  					</div>	
  				</div>
 	    </ul>
@@ -60,7 +62,7 @@
 	      <div class="icon">
 		      <i class="ion-ios-chatboxes" style="margin-right: 10px"></i>
 		      <i class="ion-ios-telephone"></i>
-		   </div>
+		   	</div>
 	    </div>
 	    <div class="item item-icon-right">
 	      <i class="icon ion-home"></i>
