--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -20,6 +20,8 @@
 // Both iOS and MD colors can be further customized if colors
 // are different per mode.
 
+@import 'globals.core';
+
 $colors: (
   primary:    #387ef5,
   secondary:  #32db64,
